--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
+    "json-server": "^0.17.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-is": ">= 16.8.0",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.3"
   },
   "devDependencies": {
     "eslint": "8.17.0",
